# habit-tracker

./: README.md
habit-tracker/: Cargo.toml  Dioxus.toml  index.html  input.css  tailwind.config.js
habit-tracker/src/: asset.rs  assets.rs  components.rs  main.rs  routes.rs  services.rs  types.rs
habit-tracker/src/components/: accordion.rs  accordion_daily.rs  accordion_weekly.rs  avatar.rs  button.rs  habit_card.rs  habit_form.rs  layout.rs  navbar.rs  sidebar.rs  today.rs
habit-tracker/src/routes/: daily_habit.rs  dashboard.rs  login.rs  signup.rs  weekly_habit.rs
node-be/: .gitignore  compose.yaml  habit.http  index.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
node-be/api/: app.js
node-be/api/plugins/: bcrypt.js  cors.js  db.js  jwt-service.js  jwt.js  logger.js  sensible.d.ts  sensible.js  support.d.ts  support.js
node-be/api/routes/: root.d.ts  root.js
node-be/api/routes/habit/: index.d.ts  index.js  schema.d.ts  schema.js
node-be/api/routes/users/: index.d.ts  index.js  schema.d.ts  schema.js
node-be/api/services/: index.d.ts  index.js
node-be/prisma/: schema.prisma
node-be/prisma/migrations/20240806112127_dev/: migration.sql
node-be/prisma/migrations/20240806123350_/: migration.sql
node-be/prisma/migrations/20240821121717_/: migration.sql
node-be/src/: app.ts
node-be/src/plugins/: bcrypt.ts  jwt-service.ts  jwt.ts  logger.ts  sensible.ts
node-be/src/routes/: root.ts
node-be/src/routes/habit/: index.ts  (+1 more)
node-be/src/services/: index.ts
rust-fe/: .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js
rust-fe/src/: assets.rs  components.rs  main.rs  services.rs  types.rs
rust-fe/src/components/: button.rs  loader.rs  navbar.rs
rust-fe/src/routes/: login.rs  signup.rs
(+13 files in other folders)
