[package]
name = "habit-tracker"
version = "0.1.0"
authors = ["mrlectus <lilbrown3000@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.122"
async-recursion = "1.1.1"
anyhow = "1.0.86"
dioxus-sdk = { version = "0.5.0", features = ["storage"] }
dioxus-helmet = "0.2.4"
gloo-storage = "0.3.0"
gloo = "0.11.0"
manganis = "0.2.2"


# Debug
dioxus-logger = "0.5.1"
